<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.thinknew.shoppinglist.CreateItemActivity"
              android:orientation="vertical">

    <TextView
        android:text="@string/item_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editItemName"
        android:hint="@string/item_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/editItemPrice"
        android:hint="@string/est_price_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btnSave"
        android:hint="@string/add_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

